--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,6 @@
 
 #nav-bar {
   display: flex;
-  /* align-items: flex-end; */
   list-style: none;
   background-color: #1f2937;
   color: #efe7eb;
@@ -15,8 +14,6 @@
 }
 
 .nav-item > a {
-  /* flex: 1 1 auto; */
-  /* gap: 10px; */
   color: #e9faf8;
   font-size: 16px;
   text-decoration: none;
@@ -25,9 +22,32 @@
 .nav-item.nav-logo {
   flex: 2 1 auto;
   margin-right: auto;
-  padding-left: 30px;
+  padding-left: 50px;
   font-size: 24px;
   color: #e9faf8;
+}
 
-  /* align-self: flex-start; */
+#hero {
+  display: flex;
+  gap: 20px;
+  align-items: baseline;
+  /* margin-left: 50px; */
+  padding: 50px 10px;
+  background-color: #1f2937;
+  color: #e9faf8;
+}
+
+.hero-item {
+  flex: 1 1 auto;
+}
+.hero-item.hero-card {
+  margin-left: 50px;
+}
+
+.hero-item > button {
+  background-color: #3882f6;
+  color: #f9faf8;
+  font-weight: 800;
+  border-radius: 10px;
+  padding: 5px 20px;
 }
