--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,14 @@ h1 {
   padding: 50px 0px;
 }
 
+.small-font {
+  font-size: 14px;
+}
+
+.bold {
+  font-weight: 700;
+}
+
 /* NAVIGATION SECTION */
 
 #nav-bar {
@@ -62,20 +70,17 @@ h1 {
   /* flex-basis: 250px; */
 }
 
-.hero-item.hero-card {
-  /* margin-left: 50px; */
-}
-
-.hero-item > button {
+button {
   background-color: #3882f6;
   color: #f9faf8;
   font-weight: 800;
   border-radius: 10px;
   padding: 5px 20px;
   margin-top: 15px;
-  border: 2px solid black;
+  /* border: 2px solid black; */
+  border: none;
 }
-.hero-item > button:hover {
+button:hover {
   background-color: #5273a8;
 }
 
@@ -91,8 +96,6 @@ h1 {
 }
 
 p.hero {
-  font-size: 18px;
-  font-weight: 100;
   color: #e5e7eb;
 }
 
@@ -145,6 +148,29 @@ h1.hero {
 
 .quote-who {
   text-align: right;
-  font-weight: 700;
   font-size: 16px;
+}
+
+#callToAction {
+  display: flex;
+  background-color: #3882f6;
+  margin: 50px 80px;
+  border-radius: 5px;
+  color: white;
+  padding: 40px 80px;
+}
+
+#callToAction > div {
+  flex: 3 1 auto;
+}
+
+#callToAction > button {
+  border: 1px solid white;
+}
+
+footer {
+  background-color: #1f2937;
+  text-align: center;
+  color: white;
+  padding: 30px 0px;
 }
